syntax = "proto3";

package cloud.filibuster.examples;

service A {
  rpc AppendA (AppendRequest) returns (AppendReply) {}
}

service B{
  rpc AppendB (AppendRequest) returns (AppendReply) {}
}

service C {
  rpc AppendC (AppendRequest) returns (AppendReply) {}
}

service D{
  rpc AppendD (AppendRequest) returns (AppendReply) {}
}

message AppendRequest{
  string base = 1;
  float callID = 2;
}

message AppendReply{
  string reply = 1;
}